--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,17 @@
-
 /* Your CSS Code here. */
+
+		.holder {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .item {
+            color: black;
+            padding: 10px 20px;
+            margin: 0;
+            font-weight: bolder;
+            font-size: xx-large;
+            width: 250px;
+            height: 250px;
+        }
